# y1_sdk

./: .gitignore  README.md  README.txt  build.sh  imeta_y1_can.rules
docker/: Dockerfile  README.md  dev_into.sh  dev_start.sh
scripts/can_scripts/: imeta_y1_can.rules  search.sh  set_can.sh  set_rules.sh  start_can.sh  start_can0.sh  start_can1.sh  start_can2.sh  start_can3.sh
scripts/control_scripts/: end_pose_control.sh  go_mid_position.sh  go_straight_position.sh  go_zero_position.sh  joint_position_control.sh  repeat_position_accuracy_start.sh  test.sh
scripts/motor_scripts/: diable_motor.sh  enable_motor.sh  save_zero_position.sh
scripts/test_scripts/: MIT_can_parser_2.py  end_payload_test.py  quintic_traj.py  repeat_position_accuracy_test.py
src/imeta_y1_controller/: CMakeLists.txt  package.xml  y1_controller.cpp  y1_controller.h  y1_controller_node.cpp
src/imeta_y1_controller/include/: y1_controller.h
src/imeta_y1_controller/launch/: double_master_slave.launch  one_master.launch  one_master_left.launch  one_master_slave.launch  one_slave.launch  single_arm_controller.launch  single_arm_controller_gdb.launch
src/imeta_y1_controller/lib/y1_sdk/: CMakeLists.txt  Debug.h  can_manager.cpp  can_manager.h  y1_sdk_interface.cpp  y1_sdk_interface.h
src/imeta_y1_controller/lib/y1_sdk/can_readers/: dm_motor_reader.h
src/imeta_y1_controller/lib/y1_sdk/common/: log.h  motor_state.h
src/imeta_y1_controller/lib/y1_sdk/config/: can_config.cpp  can_config.h  motor_config.cpp  motor_config.h
src/imeta_y1_controller/lib/y1_sdk/kinodynamic/: kdl_gravity.cpp  kdl_kinematics.cpp
src/imeta_y1_controller/lib/y1_sdk/motor_interface_base/: motor_reader_base.cpp  motor_reader_base.h  motor_writer_base.cpp  motor_writer_base.h
src/imeta_y1_controller/lib/y1_sdk/motor_readers/: dm_motor_reader.cpp  dm_motor_reader.h
src/imeta_y1_controller/lib/y1_sdk/motor_writers/: dm_motor_writer.cpp  dm_motor_writer.h
src/imeta_y1_controller/src/: kalman_filter.cpp  kdl_dynamic.cpp  y1_controller.cpp  y1_controller_node.cpp
src/imeta_y1_controller/urdf/: piper_description.urdf  y1.urdf  y10804.urdf  y1_20250621.urdf  y1_20250622.urdf  y1_no_gripper_0912.urdf  y1_with_gripper_0912.urdf
src/imeta_y1_msg/: CMakeLists.txt  package.xml
src/imeta_y1_msg/msg/: ArmControl.msg  ArmJointPositionControl.msg  ArmState.msg  ArmStatus.msg
src/y1_controller/: CMakeLists.txt  package.xml  y1_controller.cpp  y1_controller.h  y1_controller_node.cpp
src/y1_controller/config/: one_master.yaml  one_master_slave.yaml  single_arm copy.yaml  single_arm.yaml  single_arm_control.yaml  two_arm_control.yaml  two_master.yaml
src/y1_controller/launch/: double_master_slave.launch  one_master.launch  one_master.launch.py  one_master_gdb.launch  one_master_left.launch  one_master_slave.launch  one_master_slave.launch.py  one_slave.launch  one_slave_test.launch  one_slave_test_gdb.launch  single_arm_control.launch  single_arm_control.launch copy 2.py  single_arm_control.launch.py  single_arm_controller.launch  single_arm_controller.launch.py  single_arm_controller_gdb.launch  two_arm_control.launch  two_arm_control.launch.py  two_master.launch  two_master.launch.py  two_master_slave.launch
src/y1_controller/lib/y1_sdk/: y1_sdk_interface.h
src/y1_controller/urdf/: y1.urdf  y10824.urdf  y10824_ee.urdf  y1_no_gripper_0914.urdf  y1_with_gripper_2to1_0914.urdf
src/y1_description/: CMakeLists.txt  package.xml
src/y1_description/config/: joint_names_000_ARM_6.yaml
src/y1_description/launch/: display.launch  gazebo.launch
src/y1_description/launch/y1_with_gripper/: display_y1_with_01_urdf.launch  display_y1_with_03_urdf.launch
src/y1_description/meshes/: Claw_Link_L.STL  Claw_Link_R.STL  J2_Link.STL  J6_Link.STL
src/y1_description/rviz/: y1.rviz
src/y1_description/urdf/: y1.csv  y1.urdf  y1_gazebo.xacro  y1_with_02.urdf  y1_with_02.xacro
src/y1_gazebo/: CMakeLists.txt  package.xml
src/y1_gazebo/config/: y1.yaml  y1_gazebo_control.yaml  y1_with_02.yaml
src/y1_gazebo/joint_states_ctrl/: joint_states_ctrl.cpp
src/y1_gazebo/launch/: gazebo_y1.launch  gazebo_y1_with_02.launch  y1_gazebo.launch
src/y1_moveit/: README.md
src/y1_moveit/y1_moveit_ctrl/: CMakeLists.txt  package.xml
src/y1_moveit/y1_moveit_ctrl/moveit_server/: joint_moveit_ctrl.cpp  joint_moveit_ctrl_server.cpp
src/y1_moveit/y1_no_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/y1_moveit/y1_no_gripper_moveit/config/: fake_controllers.yaml  joint_limits.yaml  y1.srdf
src/y1_moveit/y1_no_gripper_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
src/y1_moveit/y1_with_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/y1_moveit/y1_with_gripper_moveit/config/: fake_controllers.yaml  gazebo_y1_description.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  y1_description.srdf
src/y1_moveit/y1_with_gripper_moveit/launch/: default_warehouse_db.launch  (+15 more)
src/y1_msg/: CMakeLists.txt  package.xml
src/y1_msg/msg/: InteractionForce.msg
src/y1_teach_mode/normal_mode/: play_act_trajectory.py  play_trajectory.py  record_act_trajectory.py  record_trajectory.py
src/y1_teach_mode/teach_pose/: end_pose_play_pos.py  joint_position_play_pos.py  record_pos.py
src/y1_teach_mode/teach_trajectory/: end_pose_play_trajectory.py  joint_position_play_trajectory.py  joint_position_play_trajectory_multi_times.py  record_trajectory.py
src/y1_trajectory_teach/: end_pose_play_trajectory.py  follow_arm_play_trajectory.py  play_trajectory.py  record_trajectory.py  sin_trajectory.py
(+1 files in other folders)
