<?xml version="1.0"?>
<package format="2">
  <name>imeta_y1_controller</name>
  <version>0.0.0</version>
  <description>The imeta_y1_controller package</description>

  <maintainer email="jayce.zhang@uditech.com.cn">jayce zhang</maintainer>
  <license>Business</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>imeta_y1_msg</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>imeta_y1_msg</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>imeta_y1_msg</exec_depend>

</package>
