<?xml version="1.0"?>
<package format="2">
  <name>y1_gazebo</name>
  <version>0.0.0</version>
  <description>The gazebo package for y1 robotic arm</description>
  
  <maintainer email="601081321@qq.com">xiaofan Zhang</maintainer>
  <license>Business</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  
  <build_export_depend>gazebo_ros</build_export_depend>
  
  <exec_depend>gazebo_ros</exec_depend>

</package>