<?xml version="1.0"?>
<package format="2">
  <name>y1_gazebo</name>
  <version>0.0.0</version>
  <description>The gazebo package for y1 robotic arm</description>
  
  <maintainer email="stitch@163.com">Stitch</maintainer>
  <license>Business</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  
  <build_export_depend>gazebo_ros</build_export_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>